plot for grid search hyperparameter results + other graphs

--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -45,7 +45,7 @@
     "from src import *\n",
     "import pandas as pd\n",
     "import os.path\n",
-    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import GridSearchCV, StratifiedKFold\n",
     "import wandb\n",
     "import pickle\n",
     "from sklearn.metrics import roc_auc_score\n",
@@ -290,6 +290,7 @@
    },
    "outputs": [],
    "source": [
+    "'''\n",
     "def histogram2D_2_variables_seaborn(df, x, y, title, xlabel, ylabel, kind):\n",
     "    # Remove rows with NaN values\n",
     "    df = df.dropna(subset=[x, y])\n",
@@ -321,7 +322,8 @@
     "g.ax_joint.set_ylabel(\"Distance du tir(pieds)\", fontsize=12)\n",
     "\n",
     "# Ajuster l'espacement du titre\n",
-    "plt.subplots_adjust(top=0.9)  # Ajuste la position du titre"
+    "plt.subplots_adjust(top=0.9)  # Ajuste la position du titre\n",
+    "'''"
    ]
   },
   {
@@ -1047,6 +1049,12 @@
     "\n",
     "    return cumulative_proportion\n",
     "\n",
+    "def compute_cumulative_goal_rate_2(y_val, y_proba):\n",
+    "    sorted_indices = np.argsort(y_proba)[::-1]  # Trie les scores de probabilité par ordre décroissant\n",
+    "    y_sorted = np.array(y_val)[sorted_indices]  # Trie y_true selon les scores triés\n",
+    "    cumulative_goals = np.cumsum(y_sorted) / np.sum(y_sorted)  # Calcule la proportion cumulée\n",
+    "    return cumulative_goals\n",
+    "\n",
     "\n",
     "cumulative_proportion = compute_cumulative_goal_rate(y_val, y_proba)\n",
     "x_value = np.linspace(0, 100, len(cumulative_proportion))\n",
@@ -1060,7 +1068,7 @@
    "id": "1c4a7a8ecea0949e",
    "metadata": {},
    "source": [
-    "#### d. Le diagramme de fiabilité (courbe de calibration)"
+    "#### d) Le diagramme de fiabilité (courbe de calibration)"
    ]
   },
   {
@@ -1103,7 +1111,7 @@
    "id": "b8f82c8082864913",
    "metadata": {},
    "source": [
-    "#### Question 3 : Entrainement de deux autres classificateurs\n",
+    "### Question 3 : Entrainement de deux autres classificateurs\n",
     "- Distance seuelement\n",
     "- Angle seulement\n",
     "- Distance et angle"
@@ -1234,7 +1242,7 @@
    "id": "b3a748050bb07e4",
    "metadata": {},
    "source": [
-    "##### a) Courbe ROC avec AUC"
+    "#### a) Courbe ROC avec AUC"
    ]
   },
   {
@@ -1351,10 +1359,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e62c72ad-0afa-41e5-a563-5b095674e41f",
+   "metadata": {},
+   "source": [
+    "#### d) Diagramme de fiabilité"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "221ef54e-050d-48d7-b8ab-29aa288c82c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(8, 6))\n",
+    "\n",
+    "CalibrationDisplay.from_predictions(y2_val, y_proba_distance, n_bins=10, ax=ax, name=\"Reg log : distance\")\n",
+    "CalibrationDisplay.from_predictions(y2_val, y_proba_angle, n_bins=10, ax=ax, name=\"Reg log : angle\")\n",
+    "CalibrationDisplay.from_predictions(y2_val, y_proba_both, n_bins=10, ax=ax, name=\"Reg log : both\")\n",
+    "\n",
+    "plt.title(\"Diagramme de fiabilité\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a5462449e8905100",
    "metadata": {},
    "source": [
-    "#### Question 4: WandB"
+    "### Question 4: WandB"
    ]
   },
   {
@@ -1686,7 +1719,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# le XGBoost a le même AUC que la regression logistique (entrainée avec l'angle et la distance) "
+    "# le XGBoost a un AUC similaire a celui de la regression logistique (entrainée avec l'angle et la distance) "
    ]
   },
   {
@@ -1718,7 +1751,8 @@
    "outputs": [],
    "source": [
     "# il s'agit d'une courbe de calibrage personnalisé. la courbe monte régulièrement, cela signifie  cela signifie que les probabilités prédites \n",
-    "# par le modèle sont cohérentes avec les fréquences observées"
+    "# par le modèle sont cohérentes avec les fréquences observées\n",
+    "# La courbe est similaire a celle de la reg logistique distance + angle"
    ]
   },
   {
@@ -1744,7 +1778,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CalibrationDisplay.from_predictions(y_val, y_predicted_prob, n_bins=10)\n",
+    "CalibrationDisplay.from_predictions(y_val, y_predicted_prob, n_bins=10, name=\"XGBoost basique\")\n",
     "plt.title(\"Diagramme de fiabilité\")\n",
     "plt.show()"
    ]
@@ -1761,7 +1795,8 @@
     "#etre pas assez de données dans les bins, on est mieux de se fier a la courbe de buts par percentile qu'on a faite qui a aplus de données\n",
     "#par bin (la fraction de valeurs positive dans chaque bin est donc plus representative )\n",
     "\n",
-    "#La courbe est cohérente au début (où il y a beaucoup d'exemples) mais devient incohérente aux extrémités (où les bins sont sous-représentés)"
+    "#La courbe est cohérente au début (où il y a beaucoup d'exemples) mais devient incohérente aux extrémités (où les bins sont sous-représentés)\n",
+    "# ici le modele surprédit, alors que dans le cas de la regression logistique, le modèle sous-predit"
    ]
   },
   {
@@ -1789,14 +1824,10 @@
     ")\n",
     "\n",
     "xgb_params = {\n",
-    "    \"objective\": \"binary:logistic\",\n",
     "    \"learning_rate\": 0.3,\n",
     "    \"max_depth\": 6,\n",
     "    \"n_estimators\": 100,\n",
-    "    \"subsample\": 1.0,\n",
-    "    \"colsample_bytree\": 1.0,\n",
-    "    \"reg_lambda\": 1.0,\n",
-    "    \"reg_alpha\": 0.0,\n",
+    "    \"subsample\": 1.0\n",
     "}\n",
     "\n",
     "# Logger les hyperparamètres dans wandb\n",
@@ -1892,7 +1923,7 @@
     ")\n",
     "\n",
     "# Appliquer la pipeline aux données\n",
-    "x_train = full_pipeline.fit_transform(x_train)"
+    "x_train_transformed = full_pipeline.fit_transform(x_train)"
    ]
   },
   {
@@ -1906,25 +1937,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "736dc59b-9b7e-41e7-9bfd-b76295fd60d9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xgb = XGBClassifier(objective='binary:logistic', n_estimators=500)\n",
-    "xgb.fit(x_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "eae24435-fe08-4371-9277-305e974d8301",
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
+    "xgb = XGBClassifier(objective='binary:logistic')\n",
+    "\n",
+    "stratified_cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "\n",
     "param_grid = {\n",
-    "    \"learning_rate\": [0.01, 0.1, 0.2],        # Taux d'apprentissage\n",
-    "    \"max_depth\": [5, 10, 20],                  # Profondeur maximale des arbres\n",
-    "    \"n_estimators\": [50, 100, 200],          # Nombre d'arbres\n",
+    "    \"learning_rate\": [0.01, 0.1],        # Taux d'apprentissage\n",
+    "    \"max_depth\": [10, 20],                  # Profondeur maximale des arbres\n",
+    "    \"n_estimators\": [50, 200, 300],          # Nombre d'arbres\n",
     "    \"subsample\": [0.8, 1.0],                 # Proportion des échantillons utilisés par arbre\n",
     "}\n",
     "\n",
@@ -1932,16 +1957,214 @@
     "    estimator=xgb,\n",
     "    param_grid=param_grid,\n",
     "    scoring='f1_weighted',\n",
-    "    cv=5,                                   # Nombre de folds pour la validation croisée\n",
+    "    cv=stratified_cv,                                   # Nombre de folds pour la validation croisée\n",
     "    verbose=1,                              # Niveau de log\n",
     "    n_jobs=-1                               # Utilisation de tous les cœurs disponibles\n",
     ")\n",
     "\n",
-    "grid_search.fit(x_train, y_train)\n",
+    "grid_search.fit(x_train_transformed, y_train)\n",
     "\n",
     "# Résultats de la meilleure combinaison d'hyperparamètres\n",
     "print(\"Meilleurs hyperparamètres :\", grid_search.best_params_)\n",
-    "print(\"Meilleur score (F1-SCORE) :\", grid_search.best_score_)"
+    "print(\"Meilleur score (F1-SCORE) :\", grid_search.best_score_)\n",
+    "\n",
+    "\n",
+    "Meilleurs hyperparamètres : {'learning_rate': 0.1, 'max_depth': 20, 'n_estimators': 300, 'subsample': 1.0}\n",
+    "Meilleur score (F1-SCORE) : 0.8670661770917013\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8bb6933-b6bb-452c-a029-33749ce36e3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extraire les résultats\n",
+    "'''\n",
+    "results = grid_search.cv_results_\n",
+    "params = results['params']\n",
+    "mean_test_scores = results['mean_test_score']\n",
+    "\n",
+    "# Trier les combinaisons d'hyperparamètres par score\n",
+    "sorted_indices = np.argsort(mean_test_scores)\n",
+    "sorted_params = [params[i] for i in sorted_indices]\n",
+    "sorted_scores = mean_test_scores[sorted_indices]\n",
+    "\n",
+    "# Créer le graphique et le tableau\n",
+    "fig, ax = plt.subplots(figsize=(30, 12))\n",
+    "ax.plot(sorted_scores, label=\"F1 Score\", marker=\"o\")  # Courbe des scores\n",
+    "ax.set_xticks(range(len(sorted_params)))\n",
+    "ax.set_xticklabels(range(1, len(sorted_params) + 1), rotation=90)\n",
+    "ax.set_xlabel(\"Combinaisons d'hyperparamètres\")\n",
+    "ax.set_ylabel(\"F1 Score moyen\")\n",
+    "ax.set_title(\"Scores des combinaisons d'hyperparamètres testées\")\n",
+    "ax.grid()\n",
+    "ax.legend()\n",
+    "\n",
+    "# Ajouter un tableau\n",
+    "table_data = [[i + 1, str(p), f\"{s:.4f}\"] for i, (p, s) in enumerate(zip(sorted_params, sorted_scores))]\n",
+    "col_labels = [\"Indice\", \"Hyperparamètres\", \"F1 Score\"]\n",
+    "table = plt.table(\n",
+    "    cellText=table_data,\n",
+    "    colLabels=col_labels,\n",
+    "    cellLoc=\"center\",\n",
+    "    loc=\"right\",\n",
+    "    bbox=[1.15, 0.1, 0.6, 0.8]  # Position du tableau\n",
+    ")\n",
+    "\n",
+    "# Ajuster automatiquement la largeur des colonnes\n",
+    "table.auto_set_column_width([0, 1, 2])\n",
+    "\n",
+    "# Ajuster la mise en page\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('grid_search_hyperparameter.png', dpi=300)\n",
+    "plt.show()\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9e8d848-b50d-40cb-85a4-0bb6f62b627a",
+   "metadata": {},
+   "source": [
+    "### Courbes XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c574a99-1dbe-4820-b374-61e81ddaa611",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb_basic = XGBClassifier(objective='binary:logistic')\n",
+    "\n",
+    "# grid_search.best_params_\n",
+    "best_params = {'learning_rate': 0.1, 'max_depth': 20, 'n_estimators': 300, 'subsample': 1.0}\n",
+    "\n",
+    "xgb_advanced = XGBClassifier(objective='binary:logistic', **best_params)\n",
+    "\n",
+    "x = train_data[characteristics].dropna()\n",
+    "y = train_data['isGoal'][x.index]\n",
+    "\n",
+    "x_train, x_val, y_train, y_val = train_test_split(x, y, test_size=0.2, random_state=42, stratify=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62138198-bced-4519-bcdd-69dab0e0608b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb_basic.fit(x_train[['shotDistance', 'shotAngle']], y_train)\n",
+    "\n",
+    "x_train_transformed = full_pipeline.fit_transform(x_train)\n",
+    "x_val_transformed = full_pipeline.fit_transform(x_val)\n",
+    "\n",
+    "xgb_advanced.fit(x_train_transformed, y_train)\n",
+    "\n",
+    "y_predicted_prob_basic = xgb_basic.predict_proba(x_val[['shotDistance', 'shotAngle']])[:, 1]\n",
+    "y_predicted_prob_advanced = xgb_advanced.predict_proba(x_val_transformed)[:, 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b690cde7-6da9-4651-9ca1-a5531ac0dfca",
+   "metadata": {},
+   "source": [
+    "#### ROC/AUC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14cb74e0-cde4-48f5-9949-be2cf8b14183",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 6))\n",
+    "RocCurveDisplay.from_predictions(y_val, y_predicted_prob_basic, name=\"XGBoost basique (Distance et angle)\", color=\"blue\", ax=plt.gca())\n",
+    "RocCurveDisplay.from_predictions(y_val, y_predicted_prob_advanced, name=\"XGBoost avancé\", color=\"green\", ax=plt.gca())\n",
+    "\n",
+    "plt.title(\"ROC Curves for XGBoost Models\")\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "085880f0-fa20-419c-a939-baa62084c12b",
+   "metadata": {},
+   "source": [
+    "#### Taux de buts vs percentile de probabilité"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f5751a7-1a47-471d-bf3d-1fd03051bf53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goal_rate_basic = compute_goal_rate_by_percentile(y_val, y_predicted_prob_basic, percentiles)\n",
+    "goal_rate_advanced = compute_goal_rate_by_percentile(y_val, y_predicted_prob_advanced, percentiles)\n",
+    "\n",
+    "# Tracer les taux de buts\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(percentiles[:-1], goal_rate_basic, label=\"XGBoost basique\", color=\"blue\")\n",
+    "plt.plot(percentiles[:-1], goal_rate_advanced, label=\"XGBoost avancé\", color=\"green\")\n",
+    "\n",
+    "plt.title(\"Taux de buts par centile de probabilité\")\n",
+    "plt.xlabel(\"Centile de probabilité\")\n",
+    "plt.xlim(100,0)\n",
+    "plt.ylabel(\"Taux de buts (%)\")\n",
+    "plt.ylim(0, 100)\n",
+    "plt.grid(True)\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bd24892-087f-4791-9d5a-3334936a669d",
+   "metadata": {},
+   "source": [
+    "#### Proportion cumulée des buts par centile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9df24ed-2eb5-4d11-86f8-c6d440c08768",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27870c70-af16-4c17-b88d-27daa3bf34e9",
+   "metadata": {},
+   "source": [
+    "#### Diagramme de fiabilité"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6056b92-78f8-431c-9721-1a5aaa706c9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(8, 6))\n",
+    "\n",
+    "CalibrationDisplay.from_predictions(y_val, y_predicted_prob_basic, n_bins=10, ax=ax, name=\"XGBoost basique\")\n",
+    "CalibrationDisplay.from_predictions(y_val, y_predicted_prob_advanced, n_bins=10, ax=ax, name=\"XGBoost avancé\")\n",
+    "\n",
+    "plt.title(\"Diagramme de fiabilité\")\n",
+    "plt.show()"
    ]
   },
   {
