xgboost model saved + gris search hyperparameter optimized

--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -22,9 +22,6 @@
    },
    "outputs": [],
    "source": [
-    "from src.models import model_start\n",
-    "\n",
-    "import config\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
@@ -49,7 +46,15 @@
     "import wandb\n",
     "import pickle\n",
     "from sklearn.metrics import roc_auc_score\n",
-    "from xgboost import XGBClassifier"
+    "from xgboost import XGBClassifier\n",
+    "import config\n",
+    "from sklearn.metrics import roc_curve, auc, RocCurveDisplay\n",
+    "from sklearn.calibration import CalibrationDisplay\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, f1_score\n",
+    "# commenté car j'ai des érreurs liées au package torch qui est assez complique a installer windows\n",
+    "#from src.models import model_start"
    ]
   },
   {
@@ -664,23 +669,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "626eff9f8b26b291",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-19T01:02:19.741816Z",
-     "start_time": "2024-11-19T01:02:19.623590Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, f1_score"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "d21ecfbcf28f7733",
    "metadata": {},
@@ -969,18 +957,6 @@
    },
    "outputs": [],
    "source": [
-    "# b) Taux de buts par centile de probabilité\n",
-    "def compute_goal_rate_by_percentile(y_val, y_proba, percentiles):\n",
-    "    prob_bins = np.percentile(y_proba, percentiles)\n",
-    "    goal_rates = []\n",
-    "\n",
-    "    for i in range(len(prob_bins) - 1):\n",
-    "        mask = (y_proba >= prob_bins[i]) & (y_proba < prob_bins[i + 1])\n",
-    "        goal_rates.append(y_val[mask].mean() * 100 if mask.sum() > 0 else 0)\n",
-    "\n",
-    "    return goal_rates\n",
-    "\n",
-    "\n",
     "percentiles = np.linspace(0, 100, 11)\n",
     "goal_rates = compute_goal_rate_by_percentile(y_val, y_proba, percentiles)\n",
     "\n",
@@ -1048,12 +1024,6 @@
     "    cumulative_proportion = np.cumsum(sorted_goal_proba) * 100 / np.sum(sorted_goal_proba)\n",
     "\n",
     "    return cumulative_proportion\n",
-    "\n",
-    "def compute_cumulative_goal_rate_2(y_val, y_proba):\n",
-    "    sorted_indices = np.argsort(y_proba)[::-1]  # Trie les scores de probabilité par ordre décroissant\n",
-    "    y_sorted = np.array(y_val)[sorted_indices]  # Trie y_true selon les scores triés\n",
-    "    cumulative_goals = np.cumsum(y_sorted) / np.sum(y_sorted)  # Calcule la proportion cumulée\n",
-    "    return cumulative_goals\n",
     "\n",
     "\n",
     "cumulative_proportion = compute_cumulative_goal_rate(y_val, y_proba)\n",
@@ -1937,11 +1907,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eae24435-fe08-4371-9277-305e974d8301",
+   "id": "2b3b345a-9753-4579-853f-6e57883a11ff",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics import make_scorer\n",
+    "\n",
     "'''\n",
+    "def compute_ece(y_true, y_proba, n_bins=10):\n",
+    "    \"\"\"\n",
+    "    Calcule l'Expected Calibration Error (ECE).\n",
+    "    \n",
+    "    Args:\n",
+    "        y_true: array, étiquettes vraies (0 ou 1).\n",
+    "        y_proba: array, probabilités prédites pour la classe positive.\n",
+    "        n_bins: int, nombre de bins pour la calibration.\n",
+    "        \n",
+    "    Returns:\n",
+    "        ece: erreur de calibration moyenne attendue.\n",
+    "    \"\"\"\n",
+    "    bins = np.linspace(0, 1, n_bins + 1)\n",
+    "    bin_indices = np.digitize(y_proba, bins, right=True) - 1\n",
+    "    ece = 0.0\n",
+    "\n",
+    "    for i in range(n_bins):\n",
+    "        # Masque des exemples dans le bin courant\n",
+    "        bin_mask = bin_indices == i\n",
+    "        if bin_mask.sum() > 0:\n",
+    "            bin_mean_predicted = y_proba[bin_mask].mean()\n",
+    "            bin_actual = y_true[bin_mask].mean()\n",
+    "            ece += (bin_mask.sum() / len(y_true)) * abs(bin_mean_predicted - bin_actual)\n",
+    "    \n",
+    "    return ece\n",
+    "\n",
+    "# Créer une version négative de l'ECE pour minimisation\n",
+    "def negative_ece(y_true, y_proba):\n",
+    "    return -compute_ece(y_true, y_proba)\n",
+    "\n",
+    "ece_scorer = make_scorer(negative_ece, needs_proba=True)\n",
+    "\n",
     "xgb = XGBClassifier(objective='binary:logistic')\n",
     "\n",
     "stratified_cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
@@ -1949,14 +1953,14 @@
     "param_grid = {\n",
     "    \"learning_rate\": [0.01, 0.1],        # Taux d'apprentissage\n",
     "    \"max_depth\": [10, 20],                  # Profondeur maximale des arbres\n",
-    "    \"n_estimators\": [50, 200, 300],          # Nombre d'arbres\n",
-    "    \"subsample\": [0.8, 1.0],                 # Proportion des échantillons utilisés par arbre\n",
+    "    \"n_estimators\": [200, 300],          # Nombre d'arbres\n",
+    "    \"subsample\": [0.7, 1.0],                 # Proportion des échantillons utilisés par arbre\n",
     "}\n",
     "\n",
     "grid_search = GridSearchCV(\n",
     "    estimator=xgb,\n",
     "    param_grid=param_grid,\n",
-    "    scoring='f1_weighted',\n",
+    "    scoring=ece_scorer,\n",
     "    cv=stratified_cv,                                   # Nombre de folds pour la validation croisée\n",
     "    verbose=1,                              # Niveau de log\n",
     "    n_jobs=-1                               # Utilisation de tous les cœurs disponibles\n",
@@ -1966,61 +1970,10 @@
     "\n",
     "# Résultats de la meilleure combinaison d'hyperparamètres\n",
     "print(\"Meilleurs hyperparamètres :\", grid_search.best_params_)\n",
-    "print(\"Meilleur score (F1-SCORE) :\", grid_search.best_score_)\n",
+    "print(\"Meilleur score (Brier Score) :\", grid_search.best_score_)\n",
     "\n",
     "\n",
-    "Meilleurs hyperparamètres : {'learning_rate': 0.1, 'max_depth': 20, 'n_estimators': 300, 'subsample': 1.0}\n",
-    "Meilleur score (F1-SCORE) : 0.8670661770917013\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8bb6933-b6bb-452c-a029-33749ce36e3c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Extraire les résultats\n",
-    "'''\n",
-    "results = grid_search.cv_results_\n",
-    "params = results['params']\n",
-    "mean_test_scores = results['mean_test_score']\n",
-    "\n",
-    "# Trier les combinaisons d'hyperparamètres par score\n",
-    "sorted_indices = np.argsort(mean_test_scores)\n",
-    "sorted_params = [params[i] for i in sorted_indices]\n",
-    "sorted_scores = mean_test_scores[sorted_indices]\n",
-    "\n",
-    "# Créer le graphique et le tableau\n",
-    "fig, ax = plt.subplots(figsize=(30, 12))\n",
-    "ax.plot(sorted_scores, label=\"F1 Score\", marker=\"o\")  # Courbe des scores\n",
-    "ax.set_xticks(range(len(sorted_params)))\n",
-    "ax.set_xticklabels(range(1, len(sorted_params) + 1), rotation=90)\n",
-    "ax.set_xlabel(\"Combinaisons d'hyperparamètres\")\n",
-    "ax.set_ylabel(\"F1 Score moyen\")\n",
-    "ax.set_title(\"Scores des combinaisons d'hyperparamètres testées\")\n",
-    "ax.grid()\n",
-    "ax.legend()\n",
-    "\n",
-    "# Ajouter un tableau\n",
-    "table_data = [[i + 1, str(p), f\"{s:.4f}\"] for i, (p, s) in enumerate(zip(sorted_params, sorted_scores))]\n",
-    "col_labels = [\"Indice\", \"Hyperparamètres\", \"F1 Score\"]\n",
-    "table = plt.table(\n",
-    "    cellText=table_data,\n",
-    "    colLabels=col_labels,\n",
-    "    cellLoc=\"center\",\n",
-    "    loc=\"right\",\n",
-    "    bbox=[1.15, 0.1, 0.6, 0.8]  # Position du tableau\n",
-    ")\n",
-    "\n",
-    "# Ajuster automatiquement la largeur des colonnes\n",
-    "table.auto_set_column_width([0, 1, 2])\n",
-    "\n",
-    "# Ajuster la mise en page\n",
-    "plt.tight_layout()\n",
-    "plt.savefig('grid_search_hyperparameter.png', dpi=300)\n",
-    "plt.show()\n",
+    "# show_xgboost_hyperparameters_scores(grid_search)\n",
     "'''"
    ]
   },
@@ -2042,7 +1995,8 @@
     "xgb_basic = XGBClassifier(objective='binary:logistic')\n",
     "\n",
     "# grid_search.best_params_\n",
-    "best_params = {'learning_rate': 0.1, 'max_depth': 20, 'n_estimators': 300, 'subsample': 1.0}\n",
+    "# best_params = {'learning_rate': 0.1, 'max_depth': 20, 'n_estimators': 300, 'subsample': 1.0}\n",
+    "best_params = {'learning_rate': 0.01, 'max_depth': 10, 'n_estimators': 300, 'subsample': 1.0}\n",
     "\n",
     "xgb_advanced = XGBClassifier(objective='binary:logistic', **best_params)\n",
     "\n",
@@ -2169,11 +2123,68 @@
   },
   {
    "cell_type": "markdown",
+   "id": "02e0f610-58e6-4eaa-9828-3dcde0122f75",
+   "metadata": {},
+   "source": [
+    "### wandb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a5af3bd-8a0d-4468-9c6c-6efbab2b77fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run = wandb.init(\n",
+    "    project=config.WANDB_PROJECT_NAME,  # Nom du projet\n",
+    "    name=\"XGBoost avancé (nouvelles caractéristiques)\",  # Nom de l'expérience\n",
+    "    group=\"XGBoost\",\n",
+    "    tags=[\"XGBoost\", \"new_features\"],  # Tags pour cette expérience\n",
+    "    entity=config.WANDB_TEAM_NAME\n",
+    ")\n",
+    "\n",
+    "xgb_params = {\n",
+    "    'learning_rate': 0.01,\n",
+    "    'max_depth': 10,\n",
+    "    'n_estimators': 300,\n",
+    "    'subsample': 1.0\n",
+    "}\n",
+    "\n",
+    "# Logger les hyperparamètres dans wandb\n",
+    "wandb.config.update(xgb_params)\n",
+    "\n",
+    "auc_roc = roc_auc_score(y_val, y_predicted_prob_advanced)\n",
+    "\n",
+    "# Enregistrer les métriques dans Wandb\n",
+    "wandb.log({\"auc_roc\": auc_roc})\n",
+    "\n",
+    "model_path = \"XGBoost_improved_with_new_features.pkl\"\n",
+    "with open(model_path, \"wb\") as f:\n",
+    "    pickle.dump(xgb_advanced, f)\n",
+    "\n",
+    "# Enregistrer le modèle avec WandB\n",
+    "run.log_model(path=\"XGBoost_improved_with_new_features.pkl\", name=\"XGBoost_improved_with_new_features\")\n",
+    "\n",
+    "# Terminer l'expérience\n",
+    "wandb.finish()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bb375412-f445-4554-972f-056c57bfa60a",
    "metadata": {},
    "source": [
     "## Question 3"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acd9c9ed-bdd5-4813-b1b9-ed48b3f4f300",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
